Model/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wine-quality-predictor
  namespace: mlops
  labels:
    app: wine-quality-predictor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wine-quality-predictor
  template:
    metadata:
      labels:
        app: wine-quality-predictor
      annotations:
        # Tells Prometheus to scrape this pod
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: wine-quality-predictor
      # nodeSelector:
        # karpenter.sh/capacity-type: spot
      containers:
        - name: wine-quality-predictor
          # GitHub Actions auto-updates this image tag on every push
          # TODO: Replace <YOUR-AWS-ACCOUNT-ID> with your 12-digit AWS account ID

          image: REMOVED.dkr.ecr.ap-northeast-1.amazonaws.com/wine-quality-predictor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: mlflow-secrets-store
              mountPath: /mnt/secrets
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: mlflow-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: mlflow-secret-provider
