Model/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wine-quality-predictor
  namespace: mlops
  labels:
    app: wine-quality-predictor
spec:
  type: ClusterIP
  selector:
    app: wine-quality-predictor
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
